add rest-api in order to send messages